--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +38,26 @@
     "    openblas_logs = f.readlines()\n",
     "\n",
     "print(\"OpenBLAS stats: \", get_stats(openblas_logs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multithreaded C++ stats:  9241.5 ms +- 829.65 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"multithreaded.log\") as f:\n",
+    "    openblas_logs = f.readlines()\n",
+    "\n",
+    "print(\"Multithreaded C++ stats: \", get_stats(openblas_logs))"
    ]
   }
  ],
