Done the rknn part

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +55,29 @@
    ],
    "source": [
     "with open(\"multithreaded.log\") as f:\n",
-    "    openblas_logs = f.readlines()\n",
+    "    mt_logs = f.readlines()\n",
     "\n",
-    "print(\"Multithreaded C++ stats: \", get_stats(openblas_logs))"
+    "print(\"Multithreaded C++ stats: \", get_stats(mt_logs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multithreaded C++ stats:  1535.7 ms +- 0.37 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"rknn.log\") as f:\n",
+    "    rknn_logs = f.readlines()\n",
+    "\n",
+    "print(\"Multithreaded C++ stats: \", get_stats(rknn_logs))"
    ]
   }
  ],
