--- a/stats.ipynb
+++ b/stats.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multithreaded C++ stats:  1535.7 ms +- 0.37 ms per loop\n"
+      "RKNN stats:  1535.7 ms +- 0.37 ms per loop\n"
      ]
     }
    ],
@@ -77,7 +77,27 @@
     "with open(\"rknn.log\") as f:\n",
     "    rknn_logs = f.readlines()\n",
     "\n",
-    "print(\"Multithreaded C++ stats: \", get_stats(rknn_logs))"
+    "print(\"RKNN stats: \", get_stats(rknn_logs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RKNN with perf layout stats:  49.2 ms +- 0.30 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"rknn_perf.log\") as f:\n",
+    "    rknn_perf_logs = f.readlines()\n",
+    "\n",
+    "print(\"RKNN with perf layout stats: \", get_stats(rknn_perf_logs))"
    ]
   }
  ],
